--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -2,7 +2,7 @@
     --primary-color: #000080;
     --secondary-color: CAFOF8;
     --accent1-color: navy;
-    --accent2-color: 0d1b2a; 
+    --accent2-color:#0d1b2a; 
     --heading-font: "Georgia", "Times New Roman", serif;
     --body-font: Arial, Helvetica, sans-serif;
 }
@@ -43,6 +43,7 @@ nav, p, section, article {
 
 .socialmedia a {
     display: inline;
+    text-decoration: none; 
 }
 
 .hero {
