--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #000080;
-    --secondary-color: CAFOF8;
+    --secondary-color: #caf0f8;
     --accent1-color: navy;
     --accent2-color:#0d1b2a; 
     --heading-font: "Georgia", "Times New Roman", serif;
