--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 nav{
     background-color: darkblue;
     padding: 10px;
@@ -38,9 +45,12 @@ main img{
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p{
+    margin: 1rem;
     padding: 0;
 }
 
@@ -49,3 +59,30 @@ footer{
     border-top: 1px solid #000;
     text-align: center;
 }
+
+/* Class Selectors */
+
+.box{
+    margin: 1rem;
+    border: 1px solid rgb(0 0 0 / 10%);
+    padding: 1rem;
+    background-color: #eee;
+    color: #000;
+}
+
+.indent{
+    padding-left: 4rem;
+}
+aside {
+    width: 20em;
+    text-align: center;
+    position: relative;
+}
+
+aside h2{
+    position: absolute;
+    top: 20px;
+    left: 75px;
+    color: white;
+}
+
